test/tests/compiler/9_functions/invalid_types/extra_credit/compound_assign_function_lhs.plx
pub fn x(none) i32;

pub fn main(none) i32 {
    x += 3
    return 0
}
